--- a/Phase 2/assets/styles.css
+++ b/Phase 2/assets/styles.css
@@ -11,10 +11,33 @@ h1 {
     background-color: #3B3B3F; 
     border: none; 
     border-radius: 10px; 
+    height: 400px; 
+    padding: 10px; 
+    margin: auto;  
+    width: 700px;
+}
+
+.card-body-center {
+    display: flex;             
+    flex-direction: column;   
+    align-items: center;     
+    text-align: center;        
 }
 
 .card-header {
     background-color: #28a745; 
     color: #FFFFFF; 
+}
+
+.label{
+    color: white;        
+    text-align: center;  
+    margin-top: 10px;    
+}
+
+#fan-status {
+    color: green; 
+    font-size: 20px; 
+    margin-top: 20px; 
 }
 
