--- a/Phase 4/assets/styles.css
+++ b/Phase 4/assets/styles.css
@@ -1,1 +1,43 @@
+body {
+    background-color: #2C2C34; 
+    color: #EAEAEA; 
+}
+
+h1 {
+    color: #28a745; 
+}
+
+.card {
+    background-color: #3B3B3F; 
+    border: none; 
+    border-radius: 10px; 
+    height: 400px; 
+    padding: 10px; 
+    margin: auto;  
+    width: 700px;
+}
+
+.card-body-center {
+    display: flex;             
+    flex-direction: column;   
+    align-items: center;     
+    text-align: center;        
+}
+
+.card-header {
+    background-color: #28a745; 
+    color: #FFFFFF; 
+}
+
+.label{
+    color: white;        
+    text-align: center;  
+    margin-top: 10px;    
+}
+
+#fan-status {
+    color: green; 
+    font-size: 20px; 
+    margin-top: 20px; 
+}
 
