--- a/Phase 4/assets/styles.css
+++ b/Phase 4/assets/styles.css
@@ -1,4 +1,4 @@
-/* General Styling for the Sidebar */
+
 .sidebar {
     height: 100vh;
     width: 250px;
@@ -12,7 +12,25 @@
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
 
-/* Styling for the Tabs inside the Sidebar */
+#user-card{
+    height:940px;
+    width:400px;
+
+}
+
+#light-card{
+    width:600px;
+
+}
+
+#temp-card{
+    width:600px;
+}
+
+#fan-card{
+    width:600px;
+}
+
 .sidebar .nav-link {
     color: white;
     margin-bottom: 15px;
@@ -24,13 +42,13 @@
     background-color: #495057;
 }
 
-/* Active Tab Styling */
+
 .sidebar .nav-link.active {
     background-color: #007bff;
     color: white;
 }
 
-/* Profile Picture Styling */
+
 .profile-image {
     width: 100px;
     height: 100px;
@@ -39,7 +57,6 @@
     display: block;
 }
 
-/* User Profile Information Styling */
 .profile-info {
     text-align: center;
     margin-bottom: 20px;
